<resources>
    <string name="app_name">IssuesAuthenticator</string>
    <string name="login">Login</string>
    <string name="senha">Senha (para usuários de sistema)</string>
    <string name="button_send">Entrar</string>
    <string name="title">Login Issues Monitoring</string>
    <string name="ZC">Zona de Conforto</string>
    <string name="temp">Temperatura (em °C)</string>
    <string name="lumi">Luminosidade (em lux)</string>
    <string name="lab">Lab: </string>
    <string name="umi">Umidade (em %)</string>
    <string name="max">Máx</string>
    <string name="min">Min</string>
    <string name="save">Salvar</string>
    <string name="lab1">LENS 1</string>
    <string name="lab2">LENS 2</string>
</resources>
