<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/lumi"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Spinner
        android:id="@+id/spinner4"
        android:layout_width="87dp"
        android:layout_height="23dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintHorizontal_bias="0.292"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <Spinner
        android:id="@+id/spinner6"
        android:layout_width="87dp"
        android:layout_height="23dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        app:layout_constraintHorizontal_bias="0.898"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@+id/spinner2" />

    <Spinner
        android:id="@+id/spinner7"
        android:layout_width="87dp"
        android:layout_height="23dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        app:layout_constraintHorizontal_bias="0.265"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="77dp"
        app:layout_constraintTop_toBottomOf="@+id/spinner4" />

    <Spinner
        android:id="@+id/spinner8"
        android:layout_width="87dp"
        android:layout_height="23dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        app:layout_constraintHorizontal_bias="0.898"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="77dp"
        app:layout_constraintTop_toBottomOf="@+id/spinner6" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="87dp"
        android:layout_height="23dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="66dp"
        app:layout_constraintTop_toBottomOf="@+id/spinner3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/max"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/spinner4"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.347"
        android:layout_marginTop="77dp"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/max"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/spinner7"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.41"
        android:layout_marginTop="63dp"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/max"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/spinner4"
        app:layout_constraintHorizontal_bias="0.266"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="87dp"
        android:layout_height="23dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintHorizontal_bias="0.289"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="108dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="182dp"
        android:layout_height="27dp"
        android:text="@string/ZC"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.279"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="87dp"
        android:layout_height="23dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintHorizontal_bias="0.898"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="63dp"
        app:layout_constraintTop_toBottomOf="@+id/spinner5" />

    <Spinner
        android:id="@+id/spinner5"
        android:layout_width="87dp"
        android:layout_height="23dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintHorizontal_bias="0.898"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="111dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/umi"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="67dp"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/temp2"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="74dp"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/temp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="17dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintRight_toLeftOf="@+id/spinner3"
        android:layout_marginEnd="11dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="108dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintLeft_toRightOf="@+id/spinner7"
        android:layout_marginStart="28dp"
        app:layout_constraintRight_toLeftOf="@+id/spinner8"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.77"
        android:layout_marginTop="63dp"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintLeft_toRightOf="@+id/spinner4"
        android:layout_marginStart="33dp"
        app:layout_constraintRight_toLeftOf="@+id/spinner6"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.731"
        android:layout_marginTop="77dp"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:text="@string/min"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintRight_toLeftOf="@+id/spinner2"
        app:layout_constraintLeft_toRightOf="@+id/spinner"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.884"
        android:layout_marginTop="57dp"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/min"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintLeft_toRightOf="@+id/spinner3"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="111dp"
        app:layout_constraintRight_toLeftOf="@+id/spinner5"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.892" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/lab"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.794"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.017" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.955" />

</android.support.constraint.ConstraintLayout>